crates/ars-components/src/date_time/date_range_field/snapshots/ars_components__date_time__date_range_field__tests__snapshot_end_field_marker.snap
---
source: crates/ars-components/src/date_time/date_range_field/tests.rs
expression: snapshot_attrs(&api.end_field_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "end-field",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-range-field",
            ),
        ),
    ],
    styles: [],
}
