crates/ars-components/src/date_time/date_range_field/snapshots/ars_components__date_time__date_range_field__tests__snapshot_end_hidden_input.snap
---
source: crates/ars-components/src/date_time/date_range_field/tests.rs
expression: snapshot_attrs(&api.end_hidden_input_attrs())
---
AttrMap {
    attrs: [
        (
            Name,
            String(
                "check-out",
            ),
        ),
        (
            Type,
            String(
                "hidden",
            ),
        ),
        (
            Value,
            String(
                "2025-06-15",
            ),
        ),
    ],
    styles: [],
}
