crates/ars-components/src/date_time/date_range_field/snapshots/ars_components__date_time__date_range_field__tests__snapshot_root_end_focused.snap
---
source: crates/ars-components/src/date_time/date_range_field/tests.rs
expression: snapshot_attrs(&api.root_attrs())
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-range-field",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "end-focused",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "trip-label",
            ),
        ),
        (
            Id,
            String(
                "trip",
            ),
        ),
        (
            Role,
            String(
                "group",
            ),
        ),
    ],
    styles: [],
}
